done full website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Flower Shop</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,300;1,700;1,900&family=Open+Sans:ital,wght@0,400;0,500;0,700;0,800;1,400;1,800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
-    
+    <!-- Header Section Starts Here -->
+    <header>
+        <div>
+            <h1 class="header-title">Let's make beautiful flowers a part of your life.</h1>
+            <p class="header-description">It is a long established fact that a reader will be distracted by the readable
+                content of a page when looking
+                at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of
+                letters.
+            </p>
+            <button class="btn-primary btn-1">Shop Now</button>
+        </div>
+        <img src="Flower Asset/pngwing 10.png" alt="Image of Flowers" class="header-pic">
+    </header>
+    <!-- Header Section Ends Here -->
+
+
+    <!-- Main Section Starts Here -->
+    <main>
+        <!-- Section-1 Starts -->
+        <section class="section-1">
+            <h1 class="section-1-title">Our Featured Flowers</h1>
+            <p class="section-1-description">It is a long established fact that a reader will be distracted by the
+                readable content of a page when
+                looking at its layout.</p>
+
+        </section>
+        <!-- Section-1 Ends -->
+
+        <!-- Section-2 Starts -->
+        <section class="section-2">
+            <div class="flowers-div">
+                <img src="Flower Asset/pngwing 6.png" alt="Flower" class="flower-1">
+                <img src="Flower Asset/pngwing 5.png" alt="Flower" class="flower-2">
+                <img src="Flower Asset/pngwing 7.png" alt="Flower" class="flower-3">
+            </div>
+            <div class="flower-names">
+                <p>Pink Flower Tree</p>
+                <p>Pink Flower Tree</p>
+                <p>Pink Flower Tree</p>
+            </div>
+        </section>
+        <!-- Section-2 Ends -->
+
+        <!-- Section-3 Starts -->
+        <section class="section-3">
+            <div class="service-icons">
+                <img src="Flower Asset/Group 57.png" alt="Picture" class="service-icons-1">
+                <img src="Flower Asset/Group 58.png" alt="Picture" class="service-icons-2">
+                <img src="Flower Asset/Group 59.png" alt="Picture" class="service-icons-3">
+            </div>
+
+            <div class="service-icon-title">
+                <p class="service-1">Same Day Delivery. Click & Collect.</p>
+                <p>Fresh Flowers. Local Growers.</p>
+                <p>24/7 Free Support.</p>
+            </div>
+        </section>
+        <!-- Section-3 Ends -->
+
+        <!-- Section-4 Starts here -->
+        <section class="section-4">
+            <div>
+                <h1 class="section-4-title">Hot Deal ! Sale Up To 25% <span class="off">Off</span></h1>
+                <p class="section-4-description">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when
+                    looking at its layout.</p>
+                <button class="btn-primary btn-2">Sign Up</button>
+            </div>
+            <img src="Flower Asset/pngwing 8.png" alt="Picture" class="section-4-pic">
+        </section>
+        <!-- Section-4 Ends here -->
+
+        <!-- Section-5 Starts Here -->
+        <section class="section-5">
+            <h1 class="section-1-title instagram">Instagram</h1>
+            <p class="section-1-description">It is a long established fact that a reader will be distracted by the
+                readable content of a page when
+                looking at its layout.</p>
+            <div class="section-5-img">
+                <img src="Flower Asset/Flower 01.png" alt="Picture" class="section-5-img-1">
+                <img src="Flower Asset/Rectangle 4.png" alt="Picture">
+                <img src="Flower Asset/Rectangle 5.png" alt="Picture">
+                <img src="Flower Asset/Rectangle 6.png" alt="Picture">
+            </div>
+        </section>
+        <!-- Section-5 Ends Here -->
+
+        <!-- Section-6 Starts Here -->
+        <section class="section-6">
+            <h1 class="section-6-title">Get The Latest Deals</h1>
+            <p class="section-6-description">$30 coupon for first shopping</p>
+
+            <form class="form">
+                <input type="email" name="Your Email" id="email" placeholder="Enter your email here....">
+                <input type="submit" value="Subscribe" class="btn-primary btn-3">
+            </form>
+        </section>
+        <!-- Section-6 Ends Here -->
+
+    </main>
+    <!-- Main Section Ends Here -->
+
+
+    <!-- Footer Section Starts Here -->
+    <footer>
+        <h1 class="flower-shop"><span class="flower-span">Flower</span>Shop</h1>
+        <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking
+            at its layout.</p>
+        <p class="credit"><small>@2020-2023, FlowerShop.com. All rights reserved.</small></p>
+    </footer>
+    <!-- Footer Section Ends Here -->
 </body>
+
 </html>
